; ModuleID = '/home/carl/AnghaBench/freebsd/sys/security/audit/extr_audit_pipe.c_audit_pipe_preselect_delete.c'
source_filename = "/home/carl/AnghaBench/freebsd/sys/security/audit/extr_audit_pipe.c_audit_pipe_preselect_delete.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.audit_pipe = type { i32 }
%struct.audit_pipe_preselect = type { i32 }

@app_list = common dso_local global i32 0, align 4
@ENOENT = common dso_local global i32 0, align 4
@M_AUDIT_PIPE_PRESELECT = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.audit_pipe*, i32)* @audit_pipe_preselect_delete to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @audit_pipe_preselect_delete(%struct.audit_pipe* %0, i32 %1) #0 {
  %3 = alloca %struct.audit_pipe*, align 8
  %4 = alloca i32, align 4
  %5 = alloca %struct.audit_pipe_preselect*, align 8
  %6 = alloca i32, align 4
  store %struct.audit_pipe* %0, %struct.audit_pipe** %3, align 8
  store i32 %1, i32* %4, align 4
  %7 = load %struct.audit_pipe*, %struct.audit_pipe** %3, align 8
  %8 = call i32 @AUDIT_PIPE_LOCK(%struct.audit_pipe* %7)
  %9 = load %struct.audit_pipe*, %struct.audit_pipe** %3, align 8
  %10 = load i32, i32* %4, align 4
  %11 = call %struct.audit_pipe_preselect* @audit_pipe_preselect_find(%struct.audit_pipe* %9, i32 %10)
  store %struct.audit_pipe_preselect* %11, %struct.audit_pipe_preselect** %5, align 8
  %12 = load %struct.audit_pipe_preselect*, %struct.audit_pipe_preselect** %5, align 8
  %13 = icmp ne %struct.audit_pipe_preselect* %12, null
  br i1 %13, label %14, label %20

14:                                               ; preds = %2
  %15 = load %struct.audit_pipe*, %struct.audit_pipe** %3, align 8
  %16 = getelementptr inbounds %struct.audit_pipe, %struct.audit_pipe* %15, i32 0, i32 0
  %17 = load %struct.audit_pipe_preselect*, %struct.audit_pipe_preselect** %5, align 8
  %18 = load i32, i32* @app_list, align 4
  %19 = call i32 @TAILQ_REMOVE(i32* %16, %struct.audit_pipe_preselect* %17, i32 %18)
  store i32 0, i32* %6, align 4
  br label %22

20:                                               ; preds = %2
  %21 = load i32, i32* @ENOENT, align 4
  store i32 %21, i32* %6, align 4
  br label %22

22:                                               ; preds = %20, %14
  %23 = load %struct.audit_pipe*, %struct.audit_pipe** %3, align 8
  %24 = call i32 @AUDIT_PIPE_UNLOCK(%struct.audit_pipe* %23)
  %25 = load %struct.audit_pipe_preselect*, %struct.audit_pipe_preselect** %5, align 8
  %26 = icmp ne %struct.audit_pipe_preselect* %25, null
  br i1 %26, label %27, label %31

27:                                               ; preds = %22
  %28 = load %struct.audit_pipe_preselect*, %struct.audit_pipe_preselect** %5, align 8
  %29 = load i32, i32* @M_AUDIT_PIPE_PRESELECT, align 4
  %30 = call i32 @free(%struct.audit_pipe_preselect* %28, i32 %29)
  br label %31

31:                                               ; preds = %27, %22
  %32 = load i32, i32* %6, align 4
  ret i32 %32
}

declare dso_local i32 @AUDIT_PIPE_LOCK(%struct.audit_pipe*) #1

declare dso_local %struct.audit_pipe_preselect* @audit_pipe_preselect_find(%struct.audit_pipe*, i32) #1

declare dso_local i32 @TAILQ_REMOVE(i32*, %struct.audit_pipe_preselect*, i32) #1

declare dso_local i32 @AUDIT_PIPE_UNLOCK(%struct.audit_pipe*) #1

declare dso_local i32 @free(%struct.audit_pipe_preselect*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
